--- a/CrowdSpark/angular.json
+++ b/CrowdSpark/angular.json
@@ -20,10 +20,14 @@
                             "zone.js"
                         ],
                         "tsConfig": "tsconfig.app.json",
-                        "assets": [{
-                            "glob": "**/*",
-                            "input": "public"
-                        }],
+                        "assets": [
+                            "src/images",
+                            {
+                                "glob": "**/*",
+                                "input": "public",
+                                "output": "/public"
+                            }
+                        ],
                         "styles": [
                             "src/styles.css",
                             "node_modules/bootstrap/dist/css/bootstrap.min.css"
@@ -78,10 +82,15 @@
                             "zone.js/testing"
                         ],
                         "tsConfig": "tsconfig.spec.json",
-                        "assets": [{
-                            "glob": "**/*",
-                            "input": "public"
-                        }],
+                        "assets": [
+                            "src/images",
+                            {
+                                "glob": "**/*",
+                                "input": "public",
+                                "output": "/public"
+                            }
+                        ],
+                        
                         "styles": [
                             "src/styles.css"
                         ],
@@ -92,6 +101,6 @@
         }
     },
     "cli": {
-      "analytics": false
+        "analytics": false
     }
 }
