--- a/CrowdSpark/angular.json
+++ b/CrowdSpark/angular.json
@@ -30,7 +30,8 @@
                         ],
                         "styles": [
                             "src/styles.css",
-                            "node_modules/bootstrap/dist/css/bootstrap.min.css"
+                            "node_modules/bootstrap/dist/css/bootstrap.min.css",
+                            "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
                         ],
                         "scripts": [
                             "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
@@ -90,9 +91,10 @@
                                 "output": "/public"
                             }
                         ],
-                        
+
                         "styles": [
-                            "src/styles.css"
+                            "src/styles.css",
+                            "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
                         ],
                         "scripts": []
                     }
